<resources>
    <string name="app_name">HelpMeApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="algebra">ALGEBRA</string>
    <string name="applied_math">APPLIED MATH</string>
    <string name="calculus">CALCULUS</string>
    <string name="definition">DEFINITION</string>
    <string name="discrete_math">DISCRETE MATH</string>
    <string name="elementary_math">ELEMENTARY MATH</string>
    <string name="ellipses">ELLIPSES</string>
    <string name="functions">FUNCTIONS</string>
    <string name="geometry">GEOMETRY</string>
    <string name="logic">LOGIC</string>
    <string name="matrices">MATRICES</string>
    <string name="number_theory">NUMBER THEORY</string>
    <string name="plotting">PLOTTING</string>
    <string name="trigonometry">TRIGONOMETRY</string>
    <string name="numbers">NUMBERS</string>

    <string name="welcome">WELCOME TO...</string>
    <string name="help">HELP ME...!!</string>
    <string name="start">GET STARTED</string>
    <string name="intro">INTRODUCTION</string>
    <string name="about">WHAT IS ALL THIS ABOUT...??</string>
    <string name="what">\n\nWelcome to HelpMe...!\n\nThis is a great way of learning. After using this app, you will NEVER have to struggle with Math again.\n\nHelpMe is an app that helps students solve mathematical problems simpler...
just by taking a picture of your Maths problem, upload it and receiving the solution in seconds.\n\nIT\'s THAT SIMPLE.\n\nHAVE FUN...  !!(^= ^)!!</string>
    <string name="continue_button">CONTINUE</string>
    <string name="title_activity_taking_picture">TakingPicture</string>


</resources>
