<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/c"
    android:background="@android:color/transparent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_image"
        android:src="@drawable/starbucks"
        android:scaleType="centerCrop"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro"
        android:textSize="55dp"
        android:textColor="@android:color/holo_orange_dark"
        android:fontFamily="casual"
        android:id="@+id/intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/about"
        android:textSize="20dp"
        android:textColor="@android:color/background_light"
        android:id="@+id/About"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/About"
        android:layout_centerHorizontal="true">


    </ScrollView>

    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/continue_button"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:id="@+id/continue_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:id="@+id/text"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:layout_alignTop="@+id/About"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>