<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_image"
        android:src="@drawable/starbucks"
        android:scaleType="centerCrop"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="casual"
            android:textSize="59dp"
            android:textColor="@android:color/white"
            android:id="@+id/WelcomeTo"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:layout_below="@id/WelcomeTo"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight="0.54" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="57sp"
            android:textColor="@android:color/background_light"
            android:fontFamily="casual"
            android:id="@string/welcome"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help"
            android:textSize="65sp"
            android:layout_alignBottom="@+id/button"
            android:textColor="@android:color/holo_orange_dark"
            android:fontFamily="casual"
            android:id="@+id/HelpMe"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/get_started_button"
            android:layout_alignBottom="@+id/HelpMe"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp" />

    </LinearLayout>

</RelativeLayout>
